# vehicle_domain

./: pyproject.toml
domain/: vehicle.py  vehicle_size.py
domain/events/: vehicle_added_event.py
tests/: test_vehicle.py  test_vehicle_size.py
tests/events/: test_vehicle_added_event.py
